Fix embed code overlapping social icons on narrow screens

--- a/d3js/css/wwmap.css
+++ b/d3js/css/wwmap.css
@@ -916,6 +916,9 @@ aside.info {
 	    margin-right: 0;
 	}
 
+	.embed-example { top:35px; }
+	.embed-example:after { left:calc(130px + 11.5em); }
+
 	#map {
 		margin-bottom:5em;
 	}
